--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/fields2cover
-	previous = 
-	base = 0f0ee1a
+	previous = 0f0ee1a
+	base = 2ca5129
 	trim = 
 	trimbase = 
