--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/fields2cover
-	previous = 
-	base = 294e93a
+	previous = 294e93a
+	base = bb797c2
 	trim = 
 	trimbase = 
