--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/fields2cover
-	previous = 
-	base = f19b8b1
+	previous = f19b8b1
+	base = 2e67fec
 	trim = 
 	trimbase = 
